# SurfaceQualityInspection

./: CMakeLists.txt  README.md
src/Algorithm/: BaseAlgorithm.cpp  BaseAlgorithm.h  CMakeLists.txt  ConcaveConvex.cpp  ConcaveConvex.h  CurvatureAlg.h  DefectFitting.cpp  DefectFitting.h  DistanceDifferent.cpp  DistanceDifferent.h  GaussianCurvature.cpp  GaussianCurvature.h  IntegrationReflection.cpp  IntegrationReflection.h  LeastSquares.h  MeanCurvature.cpp  MeanCurvature.h  MixCurvatureInte.cpp  MixCurvatureInte.h  MixIntegralConvex.cpp  MixIntegralConvex.h  MixReflectionConvex.cpp  MixReflectionConvex.h  NormalDifferent.cpp  NormalDifferent.h  PrincipalCurvature.cpp  PrincipalCurvature.h  ReflectionMap.cpp  ReflectionMap.h  TrainAndPredict.cpp  TrainAndPredict.h  algorithm_base.cpp  algorithm_base.h  coordinate_rotation.cpp  coordinate_rotation.h  curvature.cpp  curvature.h  data_type.h  distance_different.cpp  distance_different.h  (+20 more)
src/Algorithm/Topology/: CMakeLists.txt  Geodesic.h  UpdateRingNeighbor.h
src/Color/: CMakeLists.txt  ColorOperate.h  load_color.cpp  load_color.h
src/Common/: CMakeLists.txt
src/Common/Strategy/: AlgorithmStrategy.cpp  AlgorithmStrategy.h  CMakeLists.txt  DescriptorStrategy.h
src/Console/: CMakeLists.txt  console.cpp
src/ConvertFileFormat/: CMakeLists.txt
src/ConvertFileFormat/Main/: CMakeLists.txt  main.cxx
src/ConvertFileFormat/UI/: CMakeLists.txt
src/IO/: CMakeLists.txt  ConsoleMessage.h  ExportTrainningData.h  ImportNAS-bkb.h  ImportNAS.h  ImportOBJ.h
src/Main/: CMakeLists.txt  main.cpp
src/MeshData/: CMakeLists.txt  MeshData.cpp  MeshData.h  RegistAttribute.h
src/Opengl/: CMakeLists.txt  GLDepthBuffer.cpp  GLDepthBuffer.h  main.cpp
src/QT/: CMakeLists.txt  QtVtkWidget.cpp  QtVtkWidget.h
src/QT/menu_plugin/ui_action/: CMakeLists.txt  MenuStatusControl.cpp  MenuStatusControl.h  menu_classify_item.cpp  menu_classify_item.h  menu_context_event_item.cpp  menu_context_event_item.cpp.autosave  menu_context_event_item.h  menu_descriptor_item.cpp  menu_descriptor_item.h  menu_edit_item.cpp  menu_edit_item.h  menu_file_item.cpp  menu_file_item.h  menu_file_item.h.oT8896  menu_inspect_item.cpp  menu_inspect_item.h  menu_view_item.cpp  menu_view_item.h
src/QT/menu_plugin/ui_resource/: CMakeLists.txt  ui_menu_classification.cpp  ui_menu_classification.h  ui_menu_context_event.cpp.autosave  ui_menu_context_event.h  ui_menu_descriptor_item.cpp  ui_menu_descriptor_item.h  ui_menu_edit_item.cpp  ui_menu_edit_item.h  ui_menu_file.cpp  ui_menu_file.h  ui_menu_inspect.cpp  ui_menu_inspect.h  ui_menu_view_item.cpp  ui_menu_view_item.h
src/QT/widget_plugin/option_widget/: CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  ConfigEditWidget.cpp  ConfigEditWidget.h  ConfigPages.cpp  ConfigPages.h
src/QT/widget_plugin/ui_action/: AlignRadiusInputWidget.cpp  AlignRadiusInputWidget.h  CMakeLists.txt  HeightMapRadiusRatioWidget.cpp  HeightMapRadiusRatioWidget.h  QtVtkWidget.cpp  StatusBar.cpp  StatusBar.h  color_scalar_input_widget.cpp  color_scalar_input_widget.h  left_region_win.cpp  left_region_win.h  main_windows.cpp  main_windows.h  view_point_input_widget.cpp  view_point_input_widget.h
src/QT/widget_plugin/ui_resource/: CMakeLists.txt  HeightMapRadiusRatio.ui  LoaclRadiusInput.ui  MainPanel.ui  ModelView.ui  SmoothDiffInput.ui  color_scalar_input.ui  ui_HeightMapRadiusRatio.h  ui_LoaclRadiusInput.h  ui_MainPanel.h  ui_ModelView.h  ui_SmoothDiffInput.h  ui_color_scalar_input.cpp  ui_color_scalar_input.h  ui_view_point_input_widget.cpp  ui_view_point_input_widget.h  view_point_input_widge.ui
src/Script/: Predict.py  TrainAndPredict.py  TrainAndPredictOptimize.py
src/Utils/: CMakeLists.txt  ConvertFlatToCylinder.cpp  ConvertFlatToCylinder.h  ConvertFlatToSphere.cpp  ConvertFlatToSphere.h  FunctionDisturb.h  SphereCapDisturb.cpp  SphereCapDisturb.h  TrigonometryDisturb.cpp  TrigonometryDisturb.h  main.cpp
src/Utils_szy/: CMakeLists.txt  main.cpp
src/VTK/: CMakeLists.txt
src/VTK/Algorithms/: CMakeLists.txt  CalHeightMap.cpp  CalHeightMap.h  CalHeightMapZBuffer.cpp  CalHeightMapZBuffer.h  CalLineIntersectWithMesh.cpp  CalLineIntersectWithMesh.h  CalcuateZernikerCoefficient.cpp  CalcuateZernikerCoefficient.h  CurvatureDescriptor.cpp  CurvatureDescriptor.h  CurvatureSmoothDiffZerniker.cpp  CurvatureSmoothDiffZerniker.h  CurvatureZerniker.cpp  CurvatureZerniker.h  GaussCurvatureZerniker.cpp  GaussCurvatureZerniker.h  GenerateTrainningData.h  MeanCurvatureHistogram.cpp  MeanCurvatureHistogram.h  MeanCurvatureZerniker.cpp  MeanCurvatureZerniker.h  PrincipalCurvatureZerniker.cpp  PrincipalCurvatureZerniker.h  Propagation.cpp  Propagation.h  SurfaceDescriptor.cpp  SurfaceDescriptor.h  ZernikeCoefficient.cpp  ZernikeCoefficient.h  ZernikerClassify.cpp  ZernikerClassify.h  ZernikerPropagation.cpp  ZernikerPropagation.h  form.ui
src/VTK/callback/: AreaPickCallback.cpp  AreaPickCallback.h  CMakeLists.txt  PointPickInteractorStyle.cpp  PointPickInteractorStyle.h  interactor_style.cpp  interactor_style.h  viewpoint_callback.cpp  viewpoint_callback.h
src/VTK/interface/: CMakeLists.txt  VtkBulider.h
src/VTK/menu_operate/: AlignAlgorithm.cpp  AlignAlgorithm.h  CMakeLists.txt  GlobalAlign.cpp  GlobalAlign.h  GlobalAlignIntegralMap.cpp  GlobalAlignIntegralMap.h  GlobalAlignNormalComponent.cpp  GlobalAlignNormalComponent.h  GlobalLSIntegralRefl.cpp  GlobalLSIntegralRefl.h  GlobalLSNormalComponent.cpp  GlobalLSNormalComponent.h  LocalAlign.cpp  LocalAlign.h  LocalAlignNormalDivision.cpp  LocalAlignNormalDivision.h  LocalRegisterIntegralMap.cpp  LocalRegisterIntegralMap.h  VtkLeastSquare.h  edit_menu_operate.cpp  edit_menu_operate.h  file_menu_operate.cpp  file_menu_operate.h  view_menu_operate.cpp  view_menu_operate.h
src/VTK/vtk_data/: CMakeLists.txt  VtkPropManage.cpp  VtkPropManage.h  vtk_model_data.cpp  vtk_model_data.h
src/VTK/widget_operate/: CMakeLists.txt  ModelNameTextActor.h  left_region_operate.cpp  left_region_operate.h  view_point_operate.cpp  view_point_operate.h
src/VTKTest/: CMakeLists.txt  test_vtk.cpp
(+39 files in other folders)
