cmake_minimum_required(VERSION 2.6)

PROJECT(SQI)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_CXX_FLAGS -fopenmp)
#ADD_SUBDIRECTORY(./src/ConvertFileFormat)
add_subdirectory(./src/IO)
ADD_SUBDIRECTORY(./src/Algorithm)
ADD_SUBDIRECTORY(./src/Color)
ADD_SUBDIRECTORY(./src/MeshData)
#ADD_SUBDIRECTORY(./src/vtk)
#ADD_SUBDIRECTORY(./src/vtk_test)
ADD_SUBDIRECTORY(./src/QT)
ADD_SUBDIRECTORY(./src/Common)
ADD_SUBDIRECTORY(./src/VTK)
ADD_SUBDIRECTORY(./src/Opengl)
ADD_SUBDIRECTORY(./src/Main)
ADD_SUBDIRECTORY(./src/Console)
ADD_SUBDIRECTORY(./src/Utils)
ADD_SUBDIRECTORY(./src/Utils_szy)
ADD_SUBDIRECTORY(./src/VTKTest)
#ADD_SUBDIRECTORY(./src/Utils)

