cmake_minimum_required(VERSION 2.8)

#INCLUDE_DIRECTORIES(/home/liquan/usr/include)
set(CMAKE_CXX_FLAGS -fpermissive)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/3rd/)
find_package(OpenMP)
if(OPENMP_FOUND)
message("algorithm openmp")
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
INCLUDE_DIRECTORIES(/usr/include/python2.7)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/IO)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/Algorithm)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/VTK)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/QT)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/Common)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/MeshData)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/3rd)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/Color)

ADD_SUBDIRECTORY(./Topology)
#ADD_SUBDIRECTORY(./factory)

#SET(DIFF_SOURCES *.cpp)
#SET(DIFF_HEADER  *.h)
FILE(GLOB HEADFILE *.h)
FILE(GLOB SOURCEFILE *.cpp)
ADD_LIBRARY(SqiAlg STATIC ${HEADFILE} ${SOURCEFILE})
#ADD_LIBRARY(SqiAlg SHARED ${HEADFILE} ${SOURCEFILE})
target_link_libraries(SqiAlg
      python2.7)
