cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS -fpermissive)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/3rd)

FILE(GLOB HEADFILE *.h)
FILE(GLOB SOURCEFILE *.cpp)
SET(main_srcs main.cpp)
ADD_EXECUTABLE(Utils_szy ${main_srcs} ${HEADFILE} ${SOURCEFILE})

