cmake_minimum_required(VERSION 2.8)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
#SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY &{CMAKE_CURRENT_BINARY_DIR}/lib/test)
ADD_SUBDIRECTORY(./vtk_data)
ADD_SUBDIRECTORY(./menu_operate)
ADD_SUBDIRECTORY(./callback)
ADD_SUBDIRECTORY(./widget_operate)
ADD_SUBDIRECTORY(./interface)
ADD_SUBDIRECTORY(./Algorithms)
