cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS -fpermissive)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
SET (QT_USE_QTMAIN TRUE)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )
link_directories(${QT_LIBRARY_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/IO)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/VTK)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/QT)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/Common)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/MeshData)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/3rd)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/Algorithm)
SET(main_srcs main.cxx)
#SET(CMAKE_BUILD_TYPE = Debug)
link_directories(${PROJECT_SOURCE_DIR}/lib)
ADD_EXECUTABLE(ConvertFileFormat ${main_srcs})
if(MINGW)
TARGET_LINK_LIBRARIES(ConvertFileFormat
  #SqiCommonFacade
  QtGui4
  )
else()
TARGET_LINK_LIBRARIES(ConvertFileFormat
  #SqiCommonFacade
  ${QT_LIBRARY_DIR}/QtGui4.lib
  )
endif()

