cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS -fpermissive)
FIND_PACKAGE(VTK)
INCLUDE(${VTK_USE_FILE})
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )
#SET(ViewSrcs main_panel.cpp model_win.cpp)
FILE(GLOB ViewSrcs *.cpp)
#SET(ViewHeaders  main_panel.h model_win.h configure.h)
FILE(GLOB ViewHeaders *.h)

QT4_WRAP_UI(UISrcs ${ViewUI})
QT4_WRAP_CPP(MOCSrcs ${ViewHeaders})

ADD_LIBRARY(UI  ${ViewSrcs} ${UISrcs} ${MOCSrcs})